--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -22,4 +22,20 @@
   height: 300px;
   
 
+} */
+/* -------------------------------------------------- */
+body {
+  background-color: #b4f2e1;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0%;
+}
+
+div {
+  width:100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -30px;
 }
