--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -39,3 +39,14 @@ div {
   align-items: center;
   margin-top: -30px;
 }
+
+h1 {
+  padding: 20px 20px;
+  background-color: #ffe9c5;
+  color:#fa9191;
+  border-radius: 20px;
+}
+
+span {
+  color: #b25674;
+}
